feat: unify email config, enforce role boundaries, add BCrypt password hashing, and expand security/CORS test coverage